--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-.DS_Store
-/build
+/.idea/compiler.xml
+/.idea/deploymentTargetDropDown.xml
+/.idea/kotlinc.xml
+/.idea/vcs.xml
+/buildgradle.xml
 /captures
 .externalNativeBuild
 .cxx
