--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 /.idea/deploymentTargetDropDown.xml
 /.idea/kotlinc.xml
 /.idea/vcs.xml
-gradle.xml
+/.idea/gradle.xml
 /buildgradle.xml
 /captures
 .externalNativeBuild
