--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 /.idea/kotlinc.xml
 /.idea/vcs.xml
 /.idea/gradle.xml
-/.idea/Project_Default.xml
+/.idea/inspectionProfiles/Project_Default.xml
 /.idea/misc.xml
 /buildgradle.xml
 /captures
