--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,7 @@
 .gradle
 ./idee
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-/.idea/compiler.xml
-/.idea/deploymentTargetDropDown.xml
-/.idea/kotlinc.xml
-/.idea/vcs.xml
-/.idea/gradle.xml
-/.idea/inspectionProfiles/Project_Default.xml
-/.idea/misc.xml
+/.idea
 /buildgradle.xml
 /captures
 .externalNativeBuild
