--- a/.github/workflows/build-android.yaml
+++ b/.github/workflows/build-android.yaml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Output for run
         run:
-          echo "first line"
-          echo "second line"
+          echo first line
+          echo second line
 
 
 
