--- a/.github/workflows/unit-tests-wf.yaml
+++ b/.github/workflows/unit-tests-wf.yaml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Permission for gradlew
+        run: chmod +x ./gradlew
+
       - name: Run tests
         run: ./gradlew test
 
