--- a/.github/workflows/unit-tests-wf.yaml
+++ b/.github/workflows/unit-tests-wf.yaml
@@ -10,8 +10,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Permission for gradlew
-        run: chmod +x ./gradlew
+#      - name: Permission for gradlew
+#        run: chmod +x ./gradlew
+
+      - name: Set up Java
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: "temurin"
 
       - name: Run tests
         run: ./gradlew test
