--- a/.github/workflows/unit-tests-wf.yaml
+++ b/.github/workflows/unit-tests-wf.yaml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-#      - name: Permission for gradlew
-#        run: chmod +x ./gradlew
+      - name: Permission for gradlew
+        run: chmod +x ./gradlew
 
       - name: Set up Java
         uses: actions/setup-java@v2
