--- a/.github/workflows/unit-tests-wf.yaml
+++ b/.github/workflows/unit-tests-wf.yaml
@@ -15,6 +15,9 @@ jobs:
 
         - name: Set up Java
           uses: actions/setup-java@v4
+          with:
+            java-version: 21
+            distribution: "zulu"
 
   run-unit-test-and-report:
     runs-on: ubuntu-latest
