--- a/.github/workflows/unit-tests-wf.yaml
+++ b/.github/workflows/unit-tests-wf.yaml
@@ -54,3 +54,27 @@ jobs:
         with:
           name: android-test-report
           path: app/build/reports/androidTests/connected/
+
+  create-apk-as-artifact:
+    needs: [ run-android-test-and-report ]
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Permission for gradlew
+        run: chmod +x ./gradlew
+
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: "zulu"
+
+      - name: Create apk
+        run: ./gradlew assembleDebug --stacktrace
+
+      - name: Upload apk
+        uses: actions/upload-artifact@v4
+        with:
+          name: spoonsGame.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
